@@ -138,3 +138,6 @@
 .imgp_img {
 
 }
+.imagepicker_upload_link {
+  margin: 4px 0 8px 0;
+}
