@@ -1,3 +1,6 @@
+Image Picker for D6 in 6.x-2.x, 20011-03-17
+------------------------------------
+by hutch, added multiple uploads
 
 Image Picker for D6 in 6.x-2.x, 20011-03-06
 ------------------------------------
